// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Luna Moon Companion - Behavioral Driven Tests > Feature: Visual DOM Structure Snapshots > Scenario: Closed State Snapshot matches the exact design pattern 1`] = `
"

  <!-- The Draggable Moon -->
  <div class="moon-container" id="moon" data-tauri-drag-region="">
    <div class="moon-wrapper" id="moon-wrapper">
      <div class="moon-glow"></div>
      <div class="moon-sphere">
        <!-- Premium Crescent Moon SVG with a glowing lunar gradient and cute craters -->
        <svg class="moon-svg" viewBox="0 0 100 100">
          <defs>
            <linearGradient id="crescent-grad" x1="0%" y1="0%" x2="100%" y2="100%">
              <stop offset="0%" stop-color="#ffffff"></stop>
              <stop offset="35%" stop-color="#e2ecfd"></stop>
              <stop offset="70%" stop-color="#8ab4f8"></stop>
              <stop offset="100%" stop-color="#1b2a4a"></stop>
            </linearGradient>
            <filter id="glow-filter" x="-20%" y="-20%" width="140%" height="140%">
              <feGaussianBlur stdDeviation="3" result="blur"></feGaussianBlur>
              <feComposite in="SourceGraphic" in2="blur" operator="over"></feComposite>
            </filter>
          </defs>
          <!-- Crescent Path: perfectly smooth golden/blue crescent curve -->
          <path d="M 62 12 A 38 38 0 1 0 88 62 A 30 30 0 1 1 62 12 Z" fill="url(#crescent-grad)" filter="url(#glow-filter)"></path>
          <!-- Cute Craters inside the crescent body -->
          <circle cx="40" cy="42" r="4.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="34" cy="60" r="3.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="48" cy="28" r="3" fill="#05070f" opacity="0.35"></circle>
          <circle cx="28" cy="48" r="2.5" fill="#05070f" opacity="0.3"></circle>
        </svg>
      </div>
    </div>
  </div>

  <!-- The Glassmorphic Chat Panel -->
  <div class="chat-panel" id="chat-panel">
    <!-- Chat Header supports dragging the native window too! -->
    <div class="chat-header" data-tauri-drag-region="">
      <div class="chat-title-group">
        <div class="chat-avatar"></div>
        <div class="chat-meta">
          <h2>Luna Companion</h2>
          <span id="connection-status" class="connecting">Connecting...</span>
          <!-- Active channel (stable / dev), additive. Kept as a <small>, NOT a
               <span>, so the \`.chat-meta span::before\` dot rule doesn't draw a
               status dot next to it. Hidden until a profile is resolved so older
               state degrades gracefully. -->
          <small id="active-profile" title="Active channel: stable">stable</small>
          <!-- Build identity from the server's hello frame (additive). Kept as a
               <small>, NOT a <span>, so the \`.chat-meta span::before\` dot rule
               doesn't draw a status dot next to it. Hidden until populated. -->
          <small id="build-sha" hidden=""></small>
        </div>
      </div>
      <div class="header-actions">
        <button class="settings-btn" id="new-chat" aria-label="New conversation" title="New conversation">
          <svg viewBox="0 0 24 24" width="15" height="15" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="12" y1="5" x2="12" y2="19"></line>
            <line x1="5" y1="12" x2="19" y2="12"></line>
          </svg>
        </button>
        <button class="settings-btn" id="toggle-settings" aria-label="Settings">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <circle cx="12" cy="12" r="3"></circle>
            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
          </svg>
        </button>
        <button class="close-btn" id="close-chat" aria-label="Close Chat">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="18" y1="6" x2="6" y2="18"></line>
            <line x1="6" y1="6" x2="18" y2="18"></line>
          </svg>
        </button>
      </div>
    </div>
    
    <!-- Settings Panel (Overlays chat content) -->
    <div class="settings-panel" id="settings-panel">
      <div class="settings-content">
        <h3>App Settings</h3>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Always on Top</span>
            <span class="setting-desc">Keep Luna floating above other windows</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="always-on-top-toggle" checked="">
            <span class="slider"></span>
          </label>
        </div>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Close on Click Away</span>
            <span class="setting-desc">Collapse chat automatically when unfocused</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="close-on-blur-toggle">
            <span class="slider"></span>
          </label>
        </div>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Global Shortcut</span>
            <span class="setting-desc">Press shortcut to toggle Luna window</span>
          </div>
          <div class="shortcut-recorder-group">
            <input type="text" class="shortcut-input" id="shortcut-input" readonly="" value="⌥Space">
            <button type="button" class="record-btn" id="record-shortcut-btn">Record</button>
          </div>
        </div>

        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Channel</span>
            <span class="setting-desc">Switch this moon between the stable and dev servers</span>
            <span class="channel-error" id="channel-error" hidden=""></span>
          </div>
          <select id="channel-select" class="channel-select">
            <option value="stable">Stable</option>
            <option value="dev">Dev</option>
          </select>
        </div>

        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">App Updates</span>
            <span class="setting-desc">Check GitHub for a newer Luna Moon build</span>
            <span class="update-status" id="update-status" hidden=""></span>
          </div>
          <button type="button" class="record-btn" id="check-update-btn">Check</button>
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">WebSocket Server URL</span>
            <span class="setting-desc">Luna Central server WebSocket address (for the selected channel)</span>
          </div>
          <input type="text" id="ws-url-input" class="premium-text-input" placeholder="ws://127.0.0.1:4753/ui">
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">Auth Token</span>
            <span class="setting-desc">Optional authentication bearer token</span>
          </div>
          <input type="password" id="ws-token-input" class="premium-text-input" placeholder="Enter token (optional)...">
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">1Password Service Account</span>
            <span class="setting-desc">Send an <code>ops_…</code> service-account token to the server securely. It is verified and stored on the server — never kept in chat history or on this device.</span>
          </div>
          <input type="text" id="op-label-input" class="premium-text-input" placeholder="Account label (e.g. primary)" autocomplete="off" spellcheck="false" style="margin-bottom: 8px;">
          <input type="password" id="op-token-input" class="premium-text-input" placeholder="ops_… service-account token" autocomplete="off" spellcheck="false">
          <div style="display: flex; align-items: center; gap: 10px; margin-top: 8px;">
            <button type="button" class="record-btn" id="save-op-token-btn">Save to server</button>
            <span class="setting-desc" id="op-token-status" style="font-size: 0.75rem;" hidden=""></span>
          </div>
          <span class="setting-desc" style="margin-top: 6px;">Saving verifies the token and briefly restarts the server.</span>
        </div>

      </div>

      <div class="settings-footer">
        <button class="save-settings-btn" id="close-settings-btn">Done</button>
      </div>
    </div>
    
    <div class="chat-messages" id="chat-messages">
      <div class="msg assistant">
        Hey there! I am your native macOS Luna companion. Drag me anywhere on your screens, or click me to toggle this chat widget!
      </div>
    </div>
    
    <!-- UserAsk / alignment-survey banner. Hidden by default; SurveyEngine
         populates and reveals it when a server \`survey-request\` frame
         arrives. Lives between chat-messages and the input form so it sits
         where the operator's eye naturally lands when answering. -->
    <div class="user-ask-panel" id="user-ask-panel" role="dialog" aria-labelledby="user-ask-title" hidden="">
      <div class="user-ask-header">
        <span class="user-ask-icon" aria-hidden="true">🌙</span>
        <h3 class="user-ask-title" id="user-ask-title">Luna is checking in</h3>
        <button type="button" class="user-ask-dismiss" id="user-ask-dismiss" aria-label="Dismiss check-in">×</button>
      </div>
      <div class="user-ask-body" id="user-ask-body"></div>
      <div class="user-ask-footer">
        <span class="user-ask-hint" id="user-ask-hint">Rate task quality to submit</span>
        <button type="button" class="user-ask-submit" id="user-ask-submit" disabled="">Submit</button>
      </div>
    </div>

    <!-- Secure secret-entry panel. Hidden by default; SecretPromptEngine
         populates and reveals it when the server pushes a \`secret-request\`
         frame. The agent (server) asks for a secret (API key, token, …); the
         user types it into the password field below and the value is sent back
         on a single \`secret-result\` frame and then immediately wiped from the
         input. SECURITY: the typed secret NEVER touches localStorage, a Tauri
         command, or the chat transcript — it lives only in the input until the
         OPEN-guarded send, after which the field is cleared one-shot. Mirrors
         the docked user-ask-panel so it lands where the operator's eye does. -->
    <div class="secret-prompt-panel" id="secret-prompt-panel" role="dialog" aria-labelledby="secret-prompt-title" hidden="">
      <div class="user-ask-header">
        <span class="user-ask-icon" aria-hidden="true">🔐</span>
        <h3 class="user-ask-title" id="secret-prompt-title">Luna needs a secret</h3>
        <button type="button" class="user-ask-dismiss" id="secret-prompt-cancel-x" aria-label="Cancel secret entry">×</button>
      </div>
      <div class="user-ask-body">
        <div class="secret-prompt-prompt" id="secret-prompt-prompt"></div>
        <div class="secret-prompt-consent" id="secret-prompt-consent"></div>
        <input type="password" id="secret-prompt-input" class="premium-text-input" placeholder="Enter the secret value…" autocomplete="off" spellcheck="false">
      </div>
      <div class="user-ask-footer">
        <span class="user-ask-hint secret-prompt-status" id="secret-prompt-status" hidden=""></span>
        <button type="button" class="user-ask-dismiss-btn" id="secret-prompt-cancel">Cancel</button>
        <button type="button" class="user-ask-submit" id="secret-prompt-submit">Submit</button>
      </div>
    </div>

    <form class="chat-input-area" id="chat-form">
      <div class="attach-error" id="attach-error" hidden=""></div>
      <div class="attachments-strip" id="attachments-strip" hidden=""></div>
      <!-- Machine-access popover, anchored to .chat-input-area (position:relative). -->
      <div class="scope-menu" id="scope-menu" role="menu" aria-hidden="true">
        <div class="scope-menu-hint">Let Luna read &amp; run anything on this Mac</div>
        <div class="scope-menu-item" id="scope-full-access" role="menuitemcheckbox" aria-checked="false" tabindex="0">
          <span>Full machine access</span>
          <span class="scope-menu-check" aria-hidden="true">✓</span>
        </div>
      </div>
      <div class="composer-row">
        <input type="file" id="file-input" multiple="" hidden="">
        <button type="button" class="scope-btn" id="scope-btn" aria-label="Machine access" title="Let Luna access this machine">+</button>
        <button type="button" class="attach-btn" id="attach-btn" aria-label="Attach files" title="Attach files">
          <!-- paperclip -->
          <svg viewBox="0 0 24 24">
            <path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path>
          </svg>
        </button>
        <textarea class="chat-input" id="message-input" placeholder="Type a message..." rows="1" autocomplete="off"></textarea>
        <button type="submit" class="send-btn" aria-label="Send message">
          <svg viewBox="0 0 24 24">
            <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
          </svg>
        </button>
      </div>
    </form>
    <!-- Drag this corner to resize the whole panel. It triggers a native window resize
         (the window is frameless, so it has no OS resize edges of its own). -->
    <div class="resize-grip" id="resize-grip" title="Drag to resize" aria-hidden="true"></div>
  </div>

  <script>/* elided for snapshot */</script>
"
`;

exports[`Luna Moon Companion - Behavioral Driven Tests > Feature: Visual DOM Structure Snapshots > Scenario: Open State Snapshot matches the exact design pattern 1`] = `
"

  <!-- The Draggable Moon -->
  <div class="moon-container" id="moon" data-tauri-drag-region="">
    <div class="moon-wrapper" id="moon-wrapper" style="transform: none;">
      <div class="moon-glow"></div>
      <div class="moon-sphere">
        <!-- Premium Crescent Moon SVG with a glowing lunar gradient and cute craters -->
        <svg class="moon-svg" viewBox="0 0 100 100">
          <defs>
            <linearGradient id="crescent-grad" x1="0%" y1="0%" x2="100%" y2="100%">
              <stop offset="0%" stop-color="#ffffff"></stop>
              <stop offset="35%" stop-color="#e2ecfd"></stop>
              <stop offset="70%" stop-color="#8ab4f8"></stop>
              <stop offset="100%" stop-color="#1b2a4a"></stop>
            </linearGradient>
            <filter id="glow-filter" x="-20%" y="-20%" width="140%" height="140%">
              <feGaussianBlur stdDeviation="3" result="blur"></feGaussianBlur>
              <feComposite in="SourceGraphic" in2="blur" operator="over"></feComposite>
            </filter>
          </defs>
          <!-- Crescent Path: perfectly smooth golden/blue crescent curve -->
          <path d="M 62 12 A 38 38 0 1 0 88 62 A 30 30 0 1 1 62 12 Z" fill="url(#crescent-grad)" filter="url(#glow-filter)"></path>
          <!-- Cute Craters inside the crescent body -->
          <circle cx="40" cy="42" r="4.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="34" cy="60" r="3.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="48" cy="28" r="3" fill="#05070f" opacity="0.35"></circle>
          <circle cx="28" cy="48" r="2.5" fill="#05070f" opacity="0.3"></circle>
        </svg>
      </div>
    </div>
  </div>

  <!-- The Glassmorphic Chat Panel -->
  <div class="chat-panel active" id="chat-panel">
    <!-- Chat Header supports dragging the native window too! -->
    <div class="chat-header" data-tauri-drag-region="">
      <div class="chat-title-group">
        <div class="chat-avatar"></div>
        <div class="chat-meta">
          <h2>Luna Companion</h2>
          <span id="connection-status" class="connecting">Connecting...</span>
          <!-- Active channel (stable / dev), additive. Kept as a <small>, NOT a
               <span>, so the \`.chat-meta span::before\` dot rule doesn't draw a
               status dot next to it. Hidden until a profile is resolved so older
               state degrades gracefully. -->
          <small id="active-profile" title="Active channel: stable">stable</small>
          <!-- Build identity from the server's hello frame (additive). Kept as a
               <small>, NOT a <span>, so the \`.chat-meta span::before\` dot rule
               doesn't draw a status dot next to it. Hidden until populated. -->
          <small id="build-sha" hidden=""></small>
        </div>
      </div>
      <div class="header-actions">
        <button class="settings-btn" id="new-chat" aria-label="New conversation" title="New conversation">
          <svg viewBox="0 0 24 24" width="15" height="15" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="12" y1="5" x2="12" y2="19"></line>
            <line x1="5" y1="12" x2="19" y2="12"></line>
          </svg>
        </button>
        <button class="settings-btn" id="toggle-settings" aria-label="Settings">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <circle cx="12" cy="12" r="3"></circle>
            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
          </svg>
        </button>
        <button class="close-btn" id="close-chat" aria-label="Close Chat">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="18" y1="6" x2="6" y2="18"></line>
            <line x1="6" y1="6" x2="18" y2="18"></line>
          </svg>
        </button>
      </div>
    </div>
    
    <!-- Settings Panel (Overlays chat content) -->
    <div class="settings-panel" id="settings-panel">
      <div class="settings-content">
        <h3>App Settings</h3>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Always on Top</span>
            <span class="setting-desc">Keep Luna floating above other windows</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="always-on-top-toggle" checked="">
            <span class="slider"></span>
          </label>
        </div>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Close on Click Away</span>
            <span class="setting-desc">Collapse chat automatically when unfocused</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="close-on-blur-toggle">
            <span class="slider"></span>
          </label>
        </div>
        
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Global Shortcut</span>
            <span class="setting-desc">Press shortcut to toggle Luna window</span>
          </div>
          <div class="shortcut-recorder-group">
            <input type="text" class="shortcut-input" id="shortcut-input" readonly="" value="⌥Space">
            <button type="button" class="record-btn" id="record-shortcut-btn">Record</button>
          </div>
        </div>

        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Channel</span>
            <span class="setting-desc">Switch this moon between the stable and dev servers</span>
            <span class="channel-error" id="channel-error" hidden=""></span>
          </div>
          <select id="channel-select" class="channel-select">
            <option value="stable">Stable</option>
            <option value="dev">Dev</option>
          </select>
        </div>

        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">App Updates</span>
            <span class="setting-desc">Check GitHub for a newer Luna Moon build</span>
            <span class="update-status" id="update-status" hidden=""></span>
          </div>
          <button type="button" class="record-btn" id="check-update-btn">Check</button>
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">WebSocket Server URL</span>
            <span class="setting-desc">Luna Central server WebSocket address (for the selected channel)</span>
          </div>
          <input type="text" id="ws-url-input" class="premium-text-input" placeholder="ws://127.0.0.1:4753/ui">
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">Auth Token</span>
            <span class="setting-desc">Optional authentication bearer token</span>
          </div>
          <input type="password" id="ws-token-input" class="premium-text-input" placeholder="Enter token (optional)...">
        </div>

        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">1Password Service Account</span>
            <span class="setting-desc">Send an <code>ops_…</code> service-account token to the server securely. It is verified and stored on the server — never kept in chat history or on this device.</span>
          </div>
          <input type="text" id="op-label-input" class="premium-text-input" placeholder="Account label (e.g. primary)" autocomplete="off" spellcheck="false" style="margin-bottom: 8px;">
          <input type="password" id="op-token-input" class="premium-text-input" placeholder="ops_… service-account token" autocomplete="off" spellcheck="false">
          <div style="display: flex; align-items: center; gap: 10px; margin-top: 8px;">
            <button type="button" class="record-btn" id="save-op-token-btn">Save to server</button>
            <span class="setting-desc" id="op-token-status" style="font-size: 0.75rem;" hidden=""></span>
          </div>
          <span class="setting-desc" style="margin-top: 6px;">Saving verifies the token and briefly restarts the server.</span>
        </div>

      </div>

      <div class="settings-footer">
        <button class="save-settings-btn" id="close-settings-btn">Done</button>
      </div>
    </div>
    
    <div class="chat-messages" id="chat-messages">
      <div class="msg assistant">
        Hey there! I am your native macOS Luna companion. Drag me anywhere on your screens, or click me to toggle this chat widget!
      </div>
    </div>
    
    <!-- UserAsk / alignment-survey banner. Hidden by default; SurveyEngine
         populates and reveals it when a server \`survey-request\` frame
         arrives. Lives between chat-messages and the input form so it sits
         where the operator's eye naturally lands when answering. -->
    <div class="user-ask-panel" id="user-ask-panel" role="dialog" aria-labelledby="user-ask-title" hidden="">
      <div class="user-ask-header">
        <span class="user-ask-icon" aria-hidden="true">🌙</span>
        <h3 class="user-ask-title" id="user-ask-title">Luna is checking in</h3>
        <button type="button" class="user-ask-dismiss" id="user-ask-dismiss" aria-label="Dismiss check-in">×</button>
      </div>
      <div class="user-ask-body" id="user-ask-body"></div>
      <div class="user-ask-footer">
        <span class="user-ask-hint" id="user-ask-hint">Rate task quality to submit</span>
        <button type="button" class="user-ask-submit" id="user-ask-submit" disabled="">Submit</button>
      </div>
    </div>

    <!-- Secure secret-entry panel. Hidden by default; SecretPromptEngine
         populates and reveals it when the server pushes a \`secret-request\`
         frame. The agent (server) asks for a secret (API key, token, …); the
         user types it into the password field below and the value is sent back
         on a single \`secret-result\` frame and then immediately wiped from the
         input. SECURITY: the typed secret NEVER touches localStorage, a Tauri
         command, or the chat transcript — it lives only in the input until the
         OPEN-guarded send, after which the field is cleared one-shot. Mirrors
         the docked user-ask-panel so it lands where the operator's eye does. -->
    <div class="secret-prompt-panel" id="secret-prompt-panel" role="dialog" aria-labelledby="secret-prompt-title" hidden="">
      <div class="user-ask-header">
        <span class="user-ask-icon" aria-hidden="true">🔐</span>
        <h3 class="user-ask-title" id="secret-prompt-title">Luna needs a secret</h3>
        <button type="button" class="user-ask-dismiss" id="secret-prompt-cancel-x" aria-label="Cancel secret entry">×</button>
      </div>
      <div class="user-ask-body">
        <div class="secret-prompt-prompt" id="secret-prompt-prompt"></div>
        <div class="secret-prompt-consent" id="secret-prompt-consent"></div>
        <input type="password" id="secret-prompt-input" class="premium-text-input" placeholder="Enter the secret value…" autocomplete="off" spellcheck="false">
      </div>
      <div class="user-ask-footer">
        <span class="user-ask-hint secret-prompt-status" id="secret-prompt-status" hidden=""></span>
        <button type="button" class="user-ask-dismiss-btn" id="secret-prompt-cancel">Cancel</button>
        <button type="button" class="user-ask-submit" id="secret-prompt-submit">Submit</button>
      </div>
    </div>

    <form class="chat-input-area" id="chat-form">
      <div class="attach-error" id="attach-error" hidden=""></div>
      <div class="attachments-strip" id="attachments-strip" hidden=""></div>
      <!-- Machine-access popover, anchored to .chat-input-area (position:relative). -->
      <div class="scope-menu" id="scope-menu" role="menu" aria-hidden="true">
        <div class="scope-menu-hint">Let Luna read &amp; run anything on this Mac</div>
        <div class="scope-menu-item" id="scope-full-access" role="menuitemcheckbox" aria-checked="false" tabindex="0">
          <span>Full machine access</span>
          <span class="scope-menu-check" aria-hidden="true">✓</span>
        </div>
      </div>
      <div class="composer-row">
        <input type="file" id="file-input" multiple="" hidden="">
        <button type="button" class="scope-btn" id="scope-btn" aria-label="Machine access" title="Let Luna access this machine">+</button>
        <button type="button" class="attach-btn" id="attach-btn" aria-label="Attach files" title="Attach files">
          <!-- paperclip -->
          <svg viewBox="0 0 24 24">
            <path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path>
          </svg>
        </button>
        <textarea class="chat-input" id="message-input" placeholder="Type a message..." rows="1" autocomplete="off"></textarea>
        <button type="submit" class="send-btn" aria-label="Send message">
          <svg viewBox="0 0 24 24">
            <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
          </svg>
        </button>
      </div>
    </form>
    <!-- Drag this corner to resize the whole panel. It triggers a native window resize
         (the window is frameless, so it has no OS resize edges of its own). -->
    <div class="resize-grip" id="resize-grip" title="Drag to resize" aria-hidden="true"></div>
  </div>

  <script>/* elided for snapshot */</script>
"
`;
